[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-memory"
version = "0.1.0"
description = "OpenClaw persistent memory layer — date-bucketed JSONL + SQLite FTS5 + hybrid search"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
openclaw-memory = "openclaw_memory.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]